--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <title>Link Ilmu | Beranda</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="img/favicon.png">
 
     <!-- ***** All CSS Files ***** -->
 
     <!-- Style css -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Responsive css -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -88,7 +88,7 @@
                 <div class="container header">
                     <!-- Navbar Brand-->
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo/logo.png" alt="sticky brand-logo">
+                        <img src="img/logo/logo.png" alt="sticky brand-logo">
                     </a>
                     <div class="ml-auto"></div>
                     <!-- Navbar -->
@@ -889,17 +889,17 @@
     <!-- ***** All jQuery Plugins ***** -->
 
     <!-- jQuery(necessary for all JavaScript plugins) -->
-    <script src="assets/js/jquery/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery/jquery-3.5.1.min.js"></script>
 
     <!-- Bootstrap js -->
-    <script src="assets/js/bootstrap/popper.min.js"></script>
-    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="js/bootstrap/popper.min.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
 
     <!-- Plugins js -->
-    <script src="assets/js/plugins/plugins.min.js"></script>
+    <script src="js/plugins/plugins.min.js"></script>
 
     <!-- Active js -->
-    <script src="assets/js/active.js"></script>
+    <script src="js/active.js"></script>
 </body>
 
 </html>
