--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Link Ilmu | Beranda</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/logo-link-small.png">
 
     <!-- ***** All CSS Files ***** -->
 
@@ -88,7 +88,7 @@
                 <div class="container header">
                     <!-- Navbar Brand-->
                     <a class="navbar-brand" href="index.html">
-                        <img src="img/logo/logo.png" alt="sticky brand-logo">
+                        <img src="img/logo-link.png " alt="sticky brand-logo">
                     </a>
                     <div class="ml-auto"></div>
                     <!-- Navbar -->
@@ -106,7 +106,7 @@
                         </li>
                     </ul>
                     <!-- Navbar Icons -->
-                    <!-- <ul class="navbar-nav icons">
+                    <ul class="navbar-nav icons">
                         <li class="nav-item">
                             <a href="#" class="nav-link" data-toggle="modal" data-target="#search">
                                 <i class="fas fa-search"></i>
@@ -118,7 +118,7 @@
                         <li class="nav-item social">
                             <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </li>
-                    </ul> -->
+                    </ul>
 
                     <!-- Navbar Toggler -->
                     <ul class="navbar-nav toggle">
@@ -198,70 +198,57 @@
         </section> -->
         <!-- ***** Service Area End ***** -->
 
-        <!-- ***** Video Area Start (VISI) ***** -->
-        <section id="about" class="section about-area bg-grey ptb_150">
+
+        <!-- ***** Video Area Start (VISI MISI) ***** -->
+        <section id="about" class="section video-area bg-grey ptb_150">
             <!-- Shape Top -->
-            <!-- <div class="shape shape-top">
+            <div class="shape shape-top">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
                     fill="#FFFFFF">
                     <path class="shape-fill" d="M421.9,6.5c22.6-2.5,51.5,0.4,75.5,5.3c23.6,4.9,70.9,23.5,100.5,35.7c75.8,32.2,133.7,44.5,192.6,49.7
                 c23.6,2.1,48.7,3.5,103.4-2.5c54.7-6,106.2-25.6,106.2-25.6V0H0v30.3c0,0,72,32.6,158.4,30.5c39.2-0.7,92.8-6.7,134-22.4
                 c21.2-8.1,52.2-18.2,79.7-24.2C399.3,7.9,411.6,7.5,421.9,6.5z"></path>
                 </svg>
-            </div> -->
+            </div>
             <div class="container">
+                <div class="section-heading text-center">
+                    <h2>Visi & Misi</h2>
+                </div>
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-10 col-lg-7">
-                        <!-- Section Heading -->
-                        <div class="section-heading text-center">
-                            <h2 class="pb-3">VISI DAN MISI</h2>
-                            <div class="mt-5">
-                                <h3>VISI</h3>
-                                <p>Menjadi perusahan Penerbit terbaik di Indonesia dengan
-                                    menyediakan terbitan buku yang relevan, spesifik,
-                                    dan terarah dalam memajukan pendidikan Indonesia.</p>
-                            </div>
-                            <div class="mt-4">
-                                <h3>MISI</h3>
-                                <p>1. Menjadikan solusi yang inovatif di sektor pendidikan untuk menciptakan
-                                    kepuasan bagi seluruh klien dan pemangku kepentingan.</p>
-                                <p>2. Menerbitkan 1001 karya tulis untuk literasi bangsa yang berkualitas.</p>
-                                <p>3. Mengembangkan Potensi Praktisi lokal dengan dedikasi tinggi.</p>
-                            </div>
+                    <div class="col-12 col-md-6 col-lg-6 res-margin">
+                        <!-- Single Promo -->
+                        <div class="single-promo color-2 bg-hover active hover-bottom text-center p-5">
+                            <h3 class="mb-3">Visi</h3>
+                            <p>Menjadi perusahan Penerbit terbaik di Indonesia dengan
+                                menyediakan terbitan buku yang relevan, spesifik,
+                                dan terarah dalam memajukan pendidikan Indonesia.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 res-margin">
+                        <!-- Single Promo -->
+                        <div class="single-promo color-5 bg-hover active hover-bottom text-center p-5">
+                            <h3 class="mb-3">Misi</h3>
+                            <p>1. Menjadikan solusi yang inovatif di sektor pendidikan untuk menciptakan
+                                kepuasan bagi seluruh klien dan pemangku kepentingan.</p>
+                            <p>2. Menerbitkan 1001 karya tulis untuk literasi bangsa yang berkualitas.</p>
+                            <p>3. Mengembangkan Potensi Praktisi lokal dengan dedikasi tinggi.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="row justify-content-center align-items-center">
-                    <div class="col-12 col-md-9"> -->
-            <!-- Video Content -->
-            <!-- <div class="video-content"> -->
-            <!-- Play Button -->
-            <!-- <a class="play-btn" data-fancybox data-width="640" data-height="360" data-small-btn="true"
-                                href="https://youtu.be/TKnufs85hXk">
-                                <div class="btn-circle play-animation"></div>
-                                <div class="btn-circle play-animation animation-short"></div> -->
-            <!-- Play Icon -->
-            <!-- <div class="play-icon">
-                                    <i class="fas fa-play"></i>
-                                </div>
-                            </a>
-                            <img class="video-thumb" src="assets/img/bg/video_bg.jpg" alt="">
-                        </div>
-                    </div>
-                </div> -->
-            <!-- </div> -->
             <!-- Shape Bottom -->
-            <!-- <div class="shape shape-bottom">
+            <div class="shape shape-bottom">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
                     fill="#FFFFFF">
                     <path class="shape-fill" d="M421.9,6.5c22.6-2.5,51.5,0.4,75.5,5.3c23.6,4.9,70.9,23.5,100.5,35.7c75.8,32.2,133.7,44.5,192.6,49.7
         c23.6,2.1,48.7,3.5,103.4-2.5c54.7-6,106.2-25.6,106.2-25.6V0H0v30.3c0,0,72,32.6,158.4,30.5c39.2-0.7,92.8-6.7,134-22.4
         c21.2-8.1,52.2-18.2,79.7-24.2C399.3,7.9,411.6,7.5,421.9,6.5z"></path>
                 </svg>
-            </div> -->
+            </div>
         </section>
         <!-- ***** Video Area End ***** -->
+
+
 
         <!-- ***** Case Studies Area Start ***** -->
         <!-- <section class="section case-studies ptb_100">
@@ -612,7 +599,7 @@
                     <div class="col-12 col-lg-5">
                         <!-- Section Heading -->
                         <div class="section-heading text-center mb-3">
-                            <h2>Mari Berkolaborasi</h2>
+                            <h2>Hubungi Kami</h2>
                             <p class="d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit.
                                 Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti
@@ -626,7 +613,7 @@
                         <div class="contact-us">
                             <ul>
                                 <!-- Contact Info -->
-                                <li class="contact-info color-1 bg-hover active hover-bottom text-center p-5 m-3">
+                                <li class="contact-info color-5 bg-hover active hover-bottom text-center p-5 m-3">
                                     <span><i class="fas fa-mobile-alt fa-3x"></i></span>
                                     <a class="d-block my-2" href="#">
                                         <h3>+89 (0) 2354 5470091</h3>
@@ -634,7 +621,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </li>
                                 <!-- Contact Info -->
-                                <li class="contact-info color-3 bg-hover active hover-bottom text-center p-5 m-3">
+                                <li class="contact-info color-2 bg-hover active hover-bottom text-center p-5 m-3">
                                     <span><i class="fas fa-envelope-open-text fa-3x"></i></span>
                                     <a class="d-none d-sm-block my-2" href="#">
                                         <h3>mail@company.com</h3>
@@ -651,7 +638,7 @@
                         <!-- Contact Box -->
                         <div class="contact-box text-center">
                             <!-- Contact Form -->
-                            <form id="contact-form" method="POST" action="assets/php/mail.php">
+                            <form id="contact-form" method="POST" action="php/mail.php">
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="form-group">
@@ -679,8 +666,8 @@
                                     </div>
                                     <div class="col-12">
                                         <button type="submit" class="btn btn-bordered active btn-block mt-3"><span
-                                                class="text-white pr-3"><i class="fas fa-paper-plane"></i></span>Send
-                                            Message</button>
+                                                class="text-white pr-3"><i class="fas fa-paper-plane"></i></span>Kirim
+                                            Pesan</button>
                                     </div>
                                 </div>
                             </form>
